# Ebisu

./: Dockerfile  LICENSE  README.md  athena-0.1.0-py3-none-any.whl  demo.ipynb  docker-compose.yml  file.py  main.py  nee.ipynb  new.py  pipeline_test.ipynb  pyproject.toml  ray.ipynb  refact.ipynb  renamed.py  sim.ipynb  strategies.ipynb  test.py
.github/workflows/: clean-code.yaml
ebisu/src/core/services/: filter.py  optimizer.py
ebisu/src/services/Etf/: etf.ipynb
ebisu/src/services/backtest/: backtest.py
ebisu/src/services/constrainer/: constrainer.py
ebisu/src/services/dashboard/: configs.py  dashboard.py  tickers.json
ebisu/src/services/download/: data.py  fixed_etfs.json  stock_sectors.json  test.ipynb  variable_etfs.json  yahoo_stock_sectors.json
ebisu/src/services/filters/: macd.py  max_price.py  mean_reversion.py  min_price.py  momentum.py  random.py  romad.py  sharpe.py  sortino.py  volatility.py  volume.py
ebisu/src/services/optimization/: ewp.py  hrp.py  mvo.py  tbm.ipy
ebisu/src/services/pipeline/: pipeline.py
ebisu/src/services/plotting/: plots.py
ebisu/src/services/simulation/: random_stuff.py  simulation.py
ebisu/src/utils/: filters.py  metrics.py  optimizers.py  utils.py
