[tool.poetry]
name = "ebisu"
version = "0.1.0"
description = ""
authors = ["João Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
numpy = "^1.22.1"
pandas = "^1.3.5"
yfinance = "^0.1.69"
pyportfolioopt = "^1.5.1"
pandas-datareader = "^0.10.0"

[tool.poetry.dev-dependencies]
ipykernel = "^6.7.0"
plotly = "^5.5.0"
nbformat = "^5.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
