[tool.poetry]
name = "ebisu"
version = "0.1.0"
description = ""
authors = ["Joao Pedro Jacques Hoss <joaopedro_jh@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2.3"
pandas = "^1.5.2"
numpy = "^1.24.1"
plotly = "^5.11.0"
ipykernel = "^6.19.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
